Fix bug: unvisible author of post

--- a/src/themes/styles/style.styl
+++ b/src/themes/styles/style.styl
@@ -170,6 +170,9 @@ body
 .angular-google-map-container
 	height 500px
 
+.posted-by span
+	margin-right 4px
+
 @keyframes spinReturn {
 	0% {
 		transform rotate(0deg)
